# EasyGpp

./: @  CMakeLists.txt  README.md  install-easygpp.sh
config/: easygpp.config
include/: configurationfilereader.h  easygppstrings.h
src/: .easygppstrings.cpp.swp  LICENSE  configurationfilereader.cpp  easyclang  easygcc  easygpp.cpp  easygppstrings.cpp
src/src/: easygpp.cpp
